 
 [package]
name = "rosu-replay"
version = "0.2.2"
edition = "2021"
authors = ["Glubus"]
description = "A Rust library for parsing and writing osu! replay files (.osr format), ported from the Python osrparse library"
license = "MIT"
repository = "https://github.com/Glubus/rosu-replay"
documentation = "https://docs.rs/rosu-replay"
keywords = ["osu", "replay", "parser", "gaming", "rhythm"]
categories = ["parser-implementations", "games", "multimedia"]
readme = "README.md"

[lib]
name = "rosu_replay"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "js-sys", "web-sys", "console_error_panic_hook"]

[dependencies]
base64 = "0.22.1"
byteorder = "1.5.0"
chrono = { version = "0.4.41", features = ["serde"] }
liblzma = "0.4.5"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.16"

# WASM dependencies (optional)
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = [
  "console",
] }
console_error_panic_hook = { version = "0.1", optional = true }
